Purple: gene copy number sets driver type and reportable status